--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,8 @@
 }
 
 .App {
+  width: 100%;
+  overflow: hidden;
   text-align: center;
 }
 
@@ -32,6 +34,9 @@ textarea {
   border-radius: 5px;
   padding: 10px;
   font-size: 0.5em;
+  width: 80%;
+  min-width: 350px;
+  max-width: 600px;
 }
 
 a {
@@ -40,10 +45,11 @@ a {
   background: orangered;
   padding: 10px 20px;
   border-radius: 10px;
-  font-size: 0.7em;
+  font-size: 0.6em;
   font-weight: bold;
+  margin-top: 30px;
 }
 
-a:hover {
+a:hover, a:active {
   background: orange;
 }
